@@ -1,6 +1,6 @@
 package com.inventor.management.inventor_management.category.service.impl;
 
-import com.inventor.management.inventor_management.article.entity.Article;
+import com.inventor.management.core.validator.ObjectValidator;
 import com.inventor.management.inventor_management.article.repository.ArticleRepository;
 import com.inventor.management.inventor_management.category.dto.CategoryDto;
 import com.inventor.management.inventor_management.category.dto.CategoryRequest;
@@ -9,7 +9,6 @@ import com.inventor.management.inventor_management.category.mapper.CategoryMappe
 import com.inventor.management.inventor_management.category.repository.CategoryRepository;
 import com.inventor.management.inventor_management.category.service.CategoryService;
 import com.inventor.management.core.exceptions.EntityNotFoundException;
-import com.inventor.management.core.exceptions.ErrorCodes;
 import com.inventor.management.core.exceptions.InvalidOperationException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -18,7 +17,8 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static com.inventor.management.inventor_management.core.utils.Constants.DELETE_CATEGORY;
 
 @Service
 @Transactional
@@ -28,9 +28,11 @@ public class CategoryServiceImpl implements CategoryService {
     private final CategoryRepository categoryRepository;
     private final ArticleRepository articleRepository;
     private final CategoryMapper categoryMapper;
+    private final ObjectValidator validator;
 
     @Override
     public CategoryDto saveCategory(CategoryRequest categoryRequest) {
+        validator.validate(categoryRequest);
         return categoryMapper.fromCategoryDto(
                 categoryRepository.save(
                         categoryMapper.fromCategory(categoryRequest)
@@ -40,6 +42,7 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     public CategoryDto updateCategory(CategoryRequest categoryRequest, Long id) {
+        validator.validate(categoryRequest);
         var category = this.findById(id);
         category.setDesignation(categoryRequest.designation());
 
@@ -49,8 +52,8 @@ public class CategoryServiceImpl implements CategoryService {
     private Category findById(Long id) {
         return categoryRepository.findById(id)
                 .orElseThrow(()->new EntityNotFoundException(
-                        "Nothing Category with ID ="+id+"has been found in DataBase",
-                        ErrorCodes.ARTICLES_NOT_FOUND)
+                        "Nothing Category with ID ="+id+"has been found in DataBase"
+                        )
                 );
     }
 
@@ -68,8 +71,7 @@ public class CategoryServiceImpl implements CategoryService {
     public CategoryDto getCodeCategory(String codeCategory) {
         if(!StringUtils.hasLength(codeCategory))
             throw new EntityNotFoundException(
-                    "Nothing code category with ID="+codeCategory+"has been found in database",
-                    ErrorCodes.CATEGORY_NOT_FOUND
+                    "Nothing code category with ID="+codeCategory+"has been found in database"
             );
 
         var category = categoryRepository.findByCodeCategory(codeCategory);
@@ -80,7 +82,7 @@ public class CategoryServiceImpl implements CategoryService {
     public List<CategoryDto> listCategory() {
         return categoryRepository.findAll().stream()
                 .map(categoryMapper::fromCategoryDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -90,10 +92,9 @@ public class CategoryServiceImpl implements CategoryService {
             return;
         }
 
-        List<Article> articleList = articleRepository.findAllByCategoryId(id);
+        var articleList = articleRepository.findAllByCategoryId(id);
         if(!articleList.isEmpty()){
-            throw new InvalidOperationException("Unable to delete a category that already using by article",
-                    ErrorCodes.ARTICLE_ALREADY_IN_USE);
+            throw new InvalidOperationException(DELETE_CATEGORY);
         }
 
         categoryRepository.deleteById(id);
