@@ -1,72 +1,54 @@
 package com.inventor.management.inventor_management.enterprise.service.impl;
 
-import com.inventor.management.core.dto.RolesDto;
-import com.inventor.management.inventor_management.enterprise.entity.Enterprise;
+import com.inventor.management.core.validator.ObjectValidator;
 import com.inventor.management.core.exceptions.EntityNotFoundException;
-import com.inventor.management.core.exceptions.InvalidEntityException;
 import com.inventor.management.inventor_management.enterprise.dto.EnterpriseDto;
-import com.inventor.management.core.exceptions.ErrorCodes;
 import com.inventor.management.inventor_management.enterprise.mapper.EnterpriseMapper;
-import com.inventor.management.inventor_management.user.mapper.UserMapper;
 import com.inventor.management.inventor_management.enterprise.repository.EnterpriseRepository;
-import com.inventor.management.inventor_management.saleLine.repository.SaleLineRepository;
 import com.inventor.management.inventor_management.enterprise.service.EnterpriseService;
-import com.inventor.management.inventor_management.user.service.UserService;
-import com.inventor.management.core.validators.EnterpriseValidator;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static com.inventor.management.core.utils.JwtUnit.ADMIN_ROLE;
-
 @Service
 @Transactional
 @RequiredArgsConstructor
 @Slf4j
 public class EnterpriseServiceImpl implements EnterpriseService {
     private final EnterpriseRepository enterpriseRepository;
-    private final SaleLineRepository.RolesRepository rolesRepository;
-    private final UserService userService;
     private final EnterpriseMapper enterpriseMapper;
-    private final UserMapper userMapper;
+    private final ObjectValidator validator;
 
     @Override
     public EnterpriseDto saveEnterprise(EnterpriseDto enterpriseDto) {
-        List<String> errors = EnterpriseValidator.validate(enterpriseDto);
-        if(!errors.isEmpty()){
-            log.error("Enterprise is invalid" + enterpriseDto);
-            throw new InvalidEntityException("Enterprise is invalid", ErrorCodes.ENTERPRISE_NOT_VALID,errors);
-        }
+        validator.validate(enterpriseDto);
 
         var enterprise = enterpriseMapper.fromEnterpriseDto(enterpriseDto);
         var savedEnterprise = enterpriseRepository.save(enterprise);
-        var savedEnterpriseDto = enterpriseMapper.fromEnterprise(savedEnterprise);
-
-        var userDto = enterpriseMapper.fromEnterpriseUser(savedEnterpriseDto);
-        var savedUser = userService.saveUser(userDto);
-
-        RolesDto rolesDto = new RolesDto();
-        rolesDto.setRoleName(ADMIN_ROLE);
-        rolesDto.setUserDto(savedUser);
-        rolesRepository.save(userMapper.fromRolesDto(rolesDto));
-
-        return savedEnterpriseDto;
+        return enterpriseMapper.fromEnterprise(savedEnterprise);
     }
 
     @Override
-    public EnterpriseDto updateEnterprise(EnterpriseDto enterpriseDto) {
-        List<String> errors = EnterpriseValidator.validate(enterpriseDto);
-        if(!errors.isEmpty()){
-            log.error("Enterprise is invalid" + enterpriseDto);
-            throw new InvalidEntityException("Enterprise is invalid", ErrorCodes.ENTERPRISE_NOT_VALID,errors);
-        }
+    public EnterpriseDto updateEnterprise(EnterpriseDto enterpriseDto, Long id) {
+        validator.validate(enterpriseDto);
+        var enterprise = this.getEnterprise(id);
 
-        Enterprise savedEnterprise = enterpriseRepository.save(enterpriseMapper.fromEnterpriseDto(enterpriseDto));
-        return enterpriseMapper.fromEnterprise(savedEnterprise);
+        enterprise.setName(enterpriseDto.getName());
+        enterprise.setDescription(enterpriseDto.getDescription());
+        enterprise.setMail(enterpriseDto.getMail());
+        enterprise.setPicture(enterpriseDto.getPicture());
+        enterprise.setNumTel(enterpriseDto.getNumTel());
+        enterprise.setAddressDto(enterpriseDto.getAddressDto());
+        enterprise.setCodeFiscal(enterpriseDto.getCodeFiscal());
+        enterprise.setSiteWeb(enterpriseDto.getSiteWeb());
+
+        return enterpriseMapper.fromEnterprise(
+                enterpriseRepository.save(
+                        enterpriseMapper.fromEnterpriseDto(enterprise)
+                )
+        );
     }
 
     @Override
@@ -76,8 +58,9 @@ public class EnterpriseServiceImpl implements EnterpriseService {
             return null;
         }
         var enterprise = enterpriseRepository.findById(id)
-                .orElseThrow(()-> new EntityNotFoundException("Nothing Enterprise with ID ="+ id + "was found in DataBase",
-                        ErrorCodes.ENTERPRISE_NOT_FOUND));
+                .orElseThrow(()-> new EntityNotFoundException("Nothing Enterprise with ID ="+ id + "was found in DataBase"
+                        )
+                );
 
         return enterpriseMapper.fromEnterprise(enterprise);
     }
@@ -86,7 +69,7 @@ public class EnterpriseServiceImpl implements EnterpriseService {
     public List<EnterpriseDto> listEnterprise() {
         return enterpriseRepository.findAll().stream()
                 .map(enterpriseMapper::fromEnterprise)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
